# ee-plant

./: Air_Humidity.h  CMakeLists.txt  README.md  settings.gradle
Android App/: local.properties  settings.gradle
Android App/app/: build.gradle
App/ee-plant.xcodeproj/: project.pbxproj
ESP32/: main.c
ESP32/C code/: Untitled.rtf
ESP32/adc_sensors/: adc_WaterLevelSensor.c  adc_WaterLevelSensor.h
ESP32/main/: main.c
ESP32/sample_project/: CMakeLists.txt  sdkconfig  sdkconfig.old
Esp32/: README.md
Esp32/main/: AirHumidity.c  AirHumidity.h  CMakeLists.txt  actuators.c  actuators.h  adc.c  adc.h  appMain.c  appMain.h  https_request.c  https_request.h  water_pump.c  water_pump.h  wifi.c  wifi.h
PCB/: pinout info.txt
PCB/Eagle/: Sensors.brd  Sensors.sch  main.brd  main.sch  pcbs-IoT2.rar  water_level_aq.brd  water_level_aq.sch  water_level_sc.brd  water_level_sc.sch
PHP/: addPlant.php  getActuators.php  getLastUpdateTime.php  getLed.php  getPlants.php  getPlantsString.php  getSensor.php  getSensorGraph.php  putSensorData.php  removePlant.php  setActuatorOne.php  setActuatorZero.php
PHP /: addPlant.php  getActuators.php  getLastUpdateTime.php  getLed.php  getPlants.php  getPlantsString.php  getSensor.php  getSensorGraph.php  putSensorData.php  removePlant.php  setActuatorOne.php  setActuatorZero.php
SolidWorks/: Assembly 22.02.19.SLDASM  Assembly1.SLDASM  Assembly2.0.SLDASM
SolidWorks/Parts/: ElectronicsCover.SLDPRT  ElectronicsFrontBack.SLDPRT  ElectronicsSide.SLDPRT  FootballLight.SLDPRT  MDFSide.SLDPRT  PlantBack.SLDPRT  (+13 more)
app/: build.gradle
(+95 files in other folders)
