idf_component_register(SRCS "appMain.c"
                            "AirHumidity.c"
                            "wifi.c"
                            "adc.c"
                            "water_pump.c"
                            "https_request.c"
                            "actuators.c"
        INCLUDE_DIRS ".")
